--- a/src/app/core/component/main/main.component.html
+++ b/src/app/core/component/main/main.component.html
@@ -3,7 +3,7 @@
   </button>
   <mat-menu #menu="matMenu">
     <button mat-menu-item routerLink="/home">
-      <mat-icon>dialpad</mat-icon>
+      <mat-icon>home</mat-icon>
       <span>Home</span>
     </button>
    
@@ -12,6 +12,4 @@
       <span>Add New </span>
     </button>
   </mat-menu>
-  
 <router-outlet></router-outlet>
-footer
