--- a/src/app/modules/component/home/add/add.component.css
+++ b/src/app/modules/component/home/add/add.component.css
@@ -3,7 +3,10 @@
     flex-direction: column;
   }
   
-  .example-container > * {
-    width: 100%;
+  .example-container form input[type='text']{
+    width: 20%;
   }
   
+  .example-container  {
+    width: 40%;
+  }
