--- a/src/app/modules/component/home/add/add.component.html
+++ b/src/app/modules/component/home/add/add.component.html
@@ -1,11 +1,11 @@
 <div class="example-container">
   <form #blogsForm="ngForm" (ngSubmit)="submit(blogsForm)">
   <mat-form-field>
-    <input matInput placeholder="Input" name="title" ngModel #title="ngModel" required />
+    <input matInput placeholder="Input" name="title" [value]="fetchedData.title" ngModel #title="ngModel" required />
     <app-messages [form]="blogsForm" [field]="title" ></app-messages>
   </mat-form-field>
   <mat-form-field>
-    <textarea matInput name="body" ngModel placeholder="Textarea" #body="ngModel" required ></textarea>
+    <textarea matInput name="body" ngModel placeholder="Textarea" #body="ngModel" required [value]="fetchedData.body"></textarea>
     <app-messages [form]="blogsForm" [field]="body" ></app-messages>
   </mat-form-field>
     <button mat-raised-button color="primary" type="submit" [disabled]="submitted" >Save</button>
