--- a/src/app/modules/component/home/home.component.html
+++ b/src/app/modules/component/home/home.component.html
@@ -13,7 +13,7 @@
   </ng-container>
   <ng-container matColumnDef="delete">
     <th mat-header-cell *matHeaderCellDef> Delete </th>
-    <td mat-cell *matCellDef="let element"> <a routerLink="/home">Delete</a> </td>
+    <td mat-cell *matCellDef="let element"> <a href="javascript:void(0)" (click)="remove(element._id)">Delete</a> </td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
