--- a/src/app/modules/component/home/home.component.html
+++ b/src/app/modules/component/home/home.component.html
@@ -18,3 +18,5 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<div *ngIf="dataSource.length==0">No Record!</div>
